// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider expect to render collapsed 1`] = `
<div
  style={
    Object {
      "display": "",
    }
  }
>
  <RawSlider-HeaderFooter
    collapsible={
      Object {
        "collapsed": true,
      }
    }
    cssClasses={Object {}}
    max={500}
    min={0}
    pips={true}
    refine={[Function]}
    shouldAutoHideContainer={false}
    step={2}
    tooltips={true}
    values={
      Array [
        0,
        0,
      ]
    }
  />
</div>
`;

exports[`Slider expect to render correctly 1`] = `
<div
  style={
    Object {
      "display": "",
    }
  }
>
  <RawSlider-HeaderFooter
    collapsible={false}
    cssClasses={Object {}}
    max={500}
    min={0}
    pips={true}
    refine={[Function]}
    shouldAutoHideContainer={false}
    step={2}
    tooltips={true}
    values={
      Array [
        0,
        0,
      ]
    }
  />
</div>
`;

exports[`Slider expect to render without pips 1`] = `
<div
  style={
    Object {
      "display": "",
    }
  }
>
  <RawSlider-HeaderFooter
    collapsible={false}
    cssClasses={Object {}}
    max={500}
    min={0}
    pips={false}
    refine={[Function]}
    shouldAutoHideContainer={false}
    step={2}
    tooltips={true}
    values={
      Array [
        0,
        0,
      ]
    }
  />
</div>
`;
